fixed whitespaces hopefully

--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@
 }
 
 .desc{
-    background-color: white;
-    border: 3px solid black;
+    background-color: #ffffff;
+    border: 3px solid #000000;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -41,8 +41,8 @@
 }
 
 .nav {
-    color: rgb(40, 106, 106);
-    background-color: white;
+    color: #1da558;
+    background-color: #ffffff;
 }
 
 .nav:hover {
